--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -50,8 +50,9 @@
 
             <div class="col-md-6">
                 <label class="form-label">Trasferta (CHF)</label>
-                <input type="number" step="0.01" name="trasferta" class="form-control">
+                <input type="number" step="0.01" name="trasferta" class="form-control" value="0.00">
             </div>
+            
 
             <div class="col-12">
                 <label class="form-label">Note (es. password o collega)</label>
