--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -44,7 +44,7 @@
             </div>
 
             <div class="col-md-6">
-                <label class="form-label">Indennizzo (€)</label>
+                <label class="form-label">Indennizzo (CHF)</label>
                 <input type="number" step="0.01" name="indennizzo" class="form-control" required>
             </div>
 
@@ -65,7 +65,9 @@
         </form>
 
         <div class="text-center mt-4">
-            <a href="/calendario.ics" target="_blank" class="btn btn-outline-secondary">Scarica calendario (.ics)</a>
+            <a href="webcal://trasporti.mferreira.ch:42069/calendario.ics" class="btn btn-success" target="_blank">
+                📅 Iscriviti al tuo calendario personale
+            </a>
         </div>
     </div>
 </div>
