--- a/app/templates/convocazioni.html
+++ b/app/templates/convocazioni.html
@@ -13,7 +13,7 @@
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
                 <li class="nav-item">
-                    <a class="nav-link active" href="/lista">Gestione Dati</a>
+                    <a class="nav-link active" href="/convocazioni">Gestione Dati</a>
                 </li>
             </ul>
         </div>
