--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -6,7 +6,19 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body class="bg-light py-5">
-<div class="container">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+        <div class="container-fluid">
+            <a class="navbar-brand" href="/">Arbitro Manager</a>
+            <div class="collapse navbar-collapse">
+                <ul class="navbar-nav ms-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="/convocazioni">Gestione Dati</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+    <div class="container">
     <div class="card shadow-lg p-4">
         <h1 class="mb-4 text-center">Nuova Convocazione</h1>
 
@@ -70,6 +82,6 @@
             </a>
         </div>
     </div>
-</div>
+    </div>
 </body>
 </html>
