--- a/app/templates/gestione-sport.html
+++ b/app/templates/gestione-sport.html
@@ -36,7 +36,7 @@
     <h3 class="mb-3">Aggiungi Categoria a Sport</h3>
     <!-- Aggiungi categoria -->
     <form action="/add-categoria" method="post" class="row g-3 mb-5">
-        <div class="col-md-3">
+        <div class="col-md-4">
             <label class="form-label">Sport</label>
             <select name="sport_id" class="form-select" required>
                 {% for sport in sport_list %}
@@ -44,21 +44,11 @@
                 {% endfor %}
             </select>
         </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <label class="form-label">Nome Categoria</label>
             <input type="text" name="nome_categoria" class="form-control" required>
         </div>
-        <div class="col-md-3">
-            <label class="form-label">Tipo Gara</label>
-            <select name="tipo_gara" class="form-select">
-                <option value="Regular season">Regular season</option>
-                <option value="Playoff">Playoff</option>
-                <option value="Playout">Playout</option>
-                <option value="Masterround">Masterround</option>
-                <option value="Amichevole">Amichevole</option>
-            </select>
-        </div>
-        <div class="col-md-3">
+        <div class="col-md-4">
             <label class="form-label">Indennizzo (CHF)</label>
             <input type="number" step="0.01" name="indennizzo" class="form-control" required>
         </div>
@@ -73,7 +63,6 @@
         <tr>
             <th>Sport</th>
             <th>Categoria</th>
-            <th>Tipo Gara</th>
             <th>Indennizzo</th>
             <th>Azioni</th>
         </tr>
@@ -83,10 +72,8 @@
         <tr>
             <td>{{ item['sport_nome'] }}</td>
             <td>{{ item['nome'] }}</td>
-            <td>{{ item['tipo_gara'] }}</td>
             <td>{{ item['indennizzo'] }} CHF</td>
             <td>
-                <!-- FUTURO: Bottone modifica -->
                 <form action="/delete-categoria/{{ item['id'] }}" method="post" style="display:inline-block" onsubmit="return confirm('Eliminare questa categoria?');">
                     <button class="btn btn-sm btn-danger">Elimina</button>
                 </form>
@@ -97,7 +84,7 @@
     </table>
 </div>
 <script>
-    // JS riservato ad aggiornamenti dinamici futuri (es. filtri categoria per sport selezionato)
+    // JS riservato ad aggiornamenti dinamici futuri
 </script>
 </body>
 </html>
