--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -33,9 +33,9 @@
                 <input type="datetime-local" name="data_inizio" class="form-control" placeholder="Inserisci data e ora" required>
             </div>
 
-            <div class="col-md-6">
+            <div class="col-md-3">
                 <label class="form-label">Orario partenza da casa</label>
-                <input type="datetime-local" name="orario_partenza" class="form-control" placeholder="Inserisci orario di partenza" required>
+                <input type="time" name="orario_partenza" class="form-control" placeholder="Inserisci orario di partenza" required>
             </div>
 
             <div class="col-md-4">
