--- a/app/templates/convocazioni.html
+++ b/app/templates/convocazioni.html
@@ -12,9 +12,9 @@
         <a class="navbar-brand" href="/">Arbitro Manager</a>
         <div class="collapse navbar-collapse">
             <ul class="navbar-nav ms-auto">
-                <li class="nav-item">
-                    <a class="nav-link active" href="/convocazioni">Gestione Dati</a>
-                </li>
+                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
+                <li class="nav-item"><a class="nav-link active" href="/convocazioni">Gestione Dati</a></li>
+                <li class="nav-item"><a class="nav-link" href="/gestione-sport">Gestione Sport</a></li>
             </ul>
         </div>
     </div>
