--- a/app/templates/gestione-sport.html
+++ b/app/templates/gestione-sport.html
@@ -7,18 +7,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body class="bg-light">
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="/">Arbitro Manager</a>
-        <div class="collapse navbar-collapse">
-            <ul class="navbar-nav ms-auto">
-                <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-                <li class="nav-item"><a class="nav-link" href="/convocazioni">Gestione Dati</a></li>
-                <li class="nav-item"><a class="nav-link active" href="/gestione-sport">Gestione Sport</a></li>
-            </ul>
-        </div>
-    </div>
-</nav>
+    {% include 'partials/navbar.html' %}
 <div class="container py-5">
     <h2 class="mb-4">Gestione Sport</h2>
 
