--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -18,73 +18,53 @@
         {% endif %}
 
         <form action="/add" method="post" class="row g-3">
-            <div class="col-sm-6 col-md-3">
+
+            <div class="row g-2">
+              <div class="col-md-4">
                 <label class="form-label">Data e ora partita</label>
-                <input type="datetime-local" name="data_inizio" class="form-control form-control-sm" required>
+                <input type="datetime-local" name="data_inizio" class="form-control" required>
+              </div>
+              <div class="col-md-2">
+                <label class="form-label">Ora partenza</label>
+                <input type="time" name="orario_partenza" class="form-control" required>
+              </div>
             </div>
-        
-            <div class="col-sm-6 col-md-2">
-                <label class="form-label">Orario partenza</label>
-                <input type="time" name="orario_partenza" class="form-control form-control-sm" required>
-            </div>
-        
-            <div class="col-md-2">
+          
+            <div class="row g-2">
+              <div class="col-md-3">
                 <label class="form-label">Sport</label>
-                <select id="sportSelect" name="sport" class="form-select form-select-sm" required>
-                    <option value="">Seleziona</option>
-                    {% for sport in sport_list %}
-                        <option value="{{ sport['id'] }}">{{ sport['nome'] }}</option>
-                    {% endfor %}
+                <select id="sportSelect" name="sport" class="form-select" required>
+                  <option value="">Seleziona</option>
+                  {% for sport in sport_list %}
+                    <option value="{{ sport['id'] }}">{{ sport['nome'] }}</option>
+                  {% endfor %}
                 </select>
-            </div>
-        
-            <div class="col-md-3">
+              </div>
+              <div class="col-md-4">
                 <label class="form-label">Categoria</label>
-                <select id="categoriaSelect" name="categoria" class="form-select form-select-sm" required>
-                    <option value="">Seleziona categoria</option>
+                <select id="categoriaSelect" name="categoria" class="form-select" required>
+                  <option value="">Seleziona categoria</option>
                 </select>
-            </div>
-        
-            <div class="col-md-2">
+              </div>
+              <div class="col-md-3">
                 <label class="form-label">Tipo Gara</label>
-                <select name="tipo_gara" class="form-select form-select-sm" required>
-                    <option value="Regular season">Regular season</option>
-                    <option value="Playoff">Playoff</option>
-                    <option value="Playout">Playout</option>
-                    <option value="Masterround">Masterround</option>
-                    <option value="Amichevole">Amichevole</option>
+                <select name="tipo_gara" class="form-select" required>
+                  <option value="Regular season">Regular season</option>
+                  <option value="Playoff">Playoff</option>
+                  <option value="Playout">Playout</option>
+                  <option value="Masterround">Masterround</option>
+                  <option value="Amichevole">Amichevole</option>
                 </select>
+              </div>
             </div>
-        
-            <div class="col-12">
-                <label class="form-label">Squadre</label>
-                <input type="text" name="squadre" class="form-control form-control-sm" placeholder="Team A vs Team B" required>
-            </div>
-        
-            <div class="col-12">
-                <label class="form-label">Luogo</label>
-                <input type="text" name="luogo" class="form-control form-control-sm" placeholder="Via e città" required>
-            </div>
-        
-            <div class="col-md-6 col-lg-4">
-                <label class="form-label">Indennizzo (CHF)</label>
-                <input type="number" step="0.01" name="indennizzo" id="indennizzoField" class="form-control form-control-sm" readonly required>
-            </div>
-        
-            <div class="col-md-6 col-lg-4">
-                <label class="form-label">Trasferta (CHF)</label>
-                <input type="number" step="0.01" name="trasferta" class="form-control form-control-sm" placeholder="Opzionale">
-            </div>
-        
-            <div class="col-12">
-                <label class="form-label">Note</label>
-                <textarea name="note" class="form-control form-control-sm" rows="2" placeholder="Es. password, collega…"></textarea>
-            </div>
-        
+          
+            <!-- Continua con Squadre, Luogo, Indennizzo, Trasferta, Note, ecc. -->
+          
             <div class="col-12 text-end">
-                <button type="submit" class="btn btn-primary">💾 Salva convocazione</button>
+              <button type="submit" class="btn btn-primary">Salva convocazione</button>
             </div>
-        </form>
+          </form>
+          
         
 
         <div class="text-center mt-4">
