--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -4,9 +4,10 @@
     <meta charset="UTF-8">
     <title>Inserisci la convocazione</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
 </head>
-<body class="bg-light py-5">
+<body class="bg-light">
     {% include 'partials/navbar.html' %}
 
     <div class="container">
