--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-primary shadow-sm mb-4">
     <div class="container-fluid">
-      <a class="navbar-brand" href="/">Arbitro Manager</a>
+      <a class="navbar-brand" href="/">RefManager</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -10,7 +10,7 @@
           <li class="nav-item"><a class="nav-link" href="/convocazioni">Convocazioni</a></li>
           <li class="nav-item"><a class="nav-link" href="/gestione-sport">Sports e categorie</a></li>
           <li class="nav-item">
-            <a class="nav-link btn btn-outline-light ms-2 px-3 py-1" style="border-radius: 20px;" href="webcal://ref.mferreira.ch/calendario.ics" target="_blank">
+            <a class="nav-link" style="border-radius: 20px;" href="webcal://ref.mferreira.ch/calendario.ics" target="_blank">
               📅 Importa partite
             </a>
           </li>
