--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -6,16 +6,18 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-          <li class="nav-item"><a class="nav-link" href="/">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="/convocazioni">Convocazioni</a></li>
-          <li class="nav-item"><a class="nav-link" href="/gestione-sport">Sports e categorie</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/">Home</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/convocazioni">Convocazioni</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/gestione-sport">Sports e categorie</a></li>
           <li class="nav-item">
-            <a class="nav-link" style="border-radius: 20px;" href="webcal://ref.mferreira.ch/calendario.ics" target="_blank">
-              📅 Importa partite
+            <a href="webcal://ref.mferreira.ch/calendario.ics" 
+                class="btn btn-outline-light ms-3" 
+                style="font-weight: 600;">
+                📅 Importa il calendario
             </a>
           </li>
         </ul>
       </div>
     </div>
-  </nav>
+</nav>
   
