--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -6,6 +6,25 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<style>
+    html {
+        overflow-y: scroll;
+    }
+    body {
+        scrollbar-width: thin;              /* Firefox */
+        scrollbar-color: #ccc transparent;  /* Firefox */
+    }
+
+    /* Chrome, Edge, Safari */
+    body::-webkit-scrollbar {
+        width: 8px;
+    }
+    body::-webkit-scrollbar-thumb {
+        background-color: #ccc;
+        border-radius: 10px;
+    }
+
+</style>
 </head>
 <body class="bg-light">
     {% include 'partials/navbar.html' %}
