--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -2,10 +2,8 @@
 <html lang="it">
 <head>
     <meta charset="UTF-8">
-    <title>Inserisci la convocazione</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    <title>Inserisci la convocazione</title> 
+    {% include 'partials/head-imports.html' %}
 <style>
     html {
         overflow-y: scroll;
