--- a/app/templates/gestione-sport.html
+++ b/app/templates/gestione-sport.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Gestione Sport e Categorie</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+    {% include 'partials/head-imports.html' %}
 </head>
 <body class="bg-light">
     {% include 'partials/navbar.html' %}
