--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -7,7 +7,7 @@
       <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
           <li class="nav-item"><a class="nav-link text-white" href="/convocazioni">Convocazioni</a></li>
-          <li class="nav-item ml-2"><a class="nav-link text-white" href="/gestione-sport">Sports e categorie</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="/gestione-sport">Sports e categorie</a></li>
           <li class="nav-item">
             <a href="webcal://ref.mferreira.ch/calendario.ics" 
                 class="btn btn-outline-light" 
