--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -45,16 +45,17 @@
                   <label class="form-label">Ora partenza</label>
                   <input type="time" name="orario_partenza" class="form-control" required>
                 </div>
-              </div>
-                <div class="col-md-2 col-lg-4">
+                <div class="col-md-2">
                     <label class="form-label">Indennizzo (CHF)</label>
                     <input type="number" step="0.01" name="indennizzo" id="indennizzoField" class="form-control form-control-sm" readonly required>
                 </div>
             
-                <div class="col-md-2col-lg-4">
+                <div class="col-md-2">
                     <label class="form-label">Trasferta (CHF)</label>
                     <input type="number" step="0.01" name="trasferta" class="form-control form-control-sm" placeholder="Opzionale">
                 </div>
+              </div>
+                
             
               <div class="row g-2">
                 <div class="col-md-3">
