--- a/app/templates/gestione-sport.html
+++ b/app/templates/gestione-sport.html
@@ -108,7 +108,7 @@
         `;
     }
 
-    sportSelectoror.addEventListener('change', (e) => {
+    sportSelector.addEventListener('change', (e) => {
         const sportId = e.target.value;
         renderCategorie(sportId);
     });
