--- a/app/templates/gestione-sport.html
+++ b/app/templates/gestione-sport.html
@@ -71,7 +71,7 @@
     const categorieWrapper = document.getElementById('categorieWrapper');
     const selectedSportInput = document.getElementById('selectedSportInput');
 
-    const allCategorie = JSON.parse('{{ sport_categorie | safe }}');
+    const allCategorie = JSON.parse('{{ sport_categorie | tojson | safe }}');
 
     function renderCategorie(sportId) {
         selectedSportInput.value = sportId;
