--- a/app/templates/gestione-sport.html
+++ b/app/templates/gestione-sport.html
@@ -68,7 +68,7 @@
 
 <script>
     const sportSelector = document.getElementById('sportSelector');
-    const categorieWrapper = document.getElementById('categorieWrapper');
+    const categorieWrapper = document.getElementById('categorieTableContainer');
     const selectedSportInput = document.getElementById('selectedSportInput');
 
     const allCategorie = JSON.parse('{{ sport_categorie | tojson | safe }}');
