--- a/app/templates/gestione-sport.html
+++ b/app/templates/gestione-sport.html
@@ -41,20 +41,21 @@
         </select>
     </h3>
     
-    <form action="/add-categoria" method="post" class="row g-2 mb-4 align-items-end">
-        <input type="hidden" name="sport_id" id="selectedSportInput">
-    
-        <div class="col-md-5 col-sm-6">
-            <label for="nome_categoria" class="form-label">Nome Categoria</label>
-            <input type="text" maxlength="40" name="nome_categoria" id="nome_categoria" placeholder="Nome Categoria" class="form-control" required>
+    <form action="/add-categoria" method="post" class="row row-cols-1 row-cols-sm-3 g-3 align-items-end">
+        <!-- Categoria -->
+        <div>
+            <label class="form-label">Nome Categoria</label>
+            <input name="nome_categoria" class="form-control" maxlength="40" required>
         </div>
-    
-        <div class="col-md-3 col-sm-4">
-            <label for="indennizzo" class="form-label">Indennizzo (CHF)</label>
-            <input type="number" step="0.01" name="indennizzo" id="indennizzo" class="form-control" required>
+
+        <!-- Indennizzo -->
+        <div>
+            <label class="form-label">Indennizzo (CHF)</label>
+            <input name="indennizzo" class="form-control" step="0.01" required>
         </div>
-    
-        <div class="col-md-2 col-sm-12 mt-sm-2 mt-md-0">
+
+        <!-- Bottone -->
+        <div>
             <button class="btn btn-success w-100">Aggiungi</button>
         </div>
     </form>
