--- a/app/templates/partials/navbar.html
+++ b/app/templates/partials/navbar.html
@@ -10,7 +10,7 @@
           <li class="nav-item"><a class="nav-link text-white" href="/convocazioni">Lista</a></li>
           <li class="nav-item "><a class="nav-link text-white" href="/gestione-sport">Sports e categorie</a></li>
           <li class="nav-item">
-            <a href="https://ref.mferreira.ch/calendario.ics" 
+            <a href="webcal://ref.mferreira.ch/calendario.ics" 
                 class="btn btn-outline-light" 
                 style="font-weight: 600;">
                 📅 Importa il calendario
